--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "devDependencies": {
     "browser-sync": "",
-    "csso": "^2.0.0",
+    "csso": "",
     "gulp": "",
     "gulp-autoprefixer": "",
     "gulp-changed": "",
-    "gulp-csso": "^2.0.0",
-    "gulp-htmlmin": "^1.3.0",
-    "gulp-inline-source": "^2.1.0",
+    "gulp-csso": "",
+    "gulp-htmlmin": "",
+    "gulp-inline-source": "",
     "gulp-notify": "",
     "gulp-plumber": "",
     "gulp-sass": "",
